COMPASS-1687: Fix editable element z-indexes

--- a/src/internal-packages/crud/styles/editable-element-value.less
+++ b/src/internal-packages/crud/styles/editable-element-value.less
@@ -57,7 +57,7 @@
   &-is-editing {
     border: 1px solid @gray3;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
-    z-index: 10;
+    z-index: 200;
     margin-top: -1px;
     margin-bottom: -1px;
   }
